slight bug fixes

--- a/ADI/App.config
+++ b/ADI/App.config
@@ -40,6 +40,6 @@
 
     <add key="ExchangeRate" value="1.2"/>
 
-    <add key="Csv" value="\example.csv"/>
+    <add key="Csv" value="C:\Users\Abraham.Glover\Source\Repos\biochemsoap\ADI\example.csv"/>
   </appSettings>
 </configuration>
