--- a/ADI/App.config
+++ b/ADI/App.config
@@ -26,6 +26,7 @@
     <add key="Password" value="**password**"/>
     <add key="server" value="lfs1.bsppl.net"/>
     <add key="SiteReference" value="**site reference**"/>
+    <add key="HomeTaxValue" value="0.23"/>
 
     <add key="GCNC GBP" value="0003199100GBP"/>
     <add key="TCNC GBP" value="0003199410GBP"/>
