reworked the code and fixed loop failings, application now works as intended for example csv

--- a/ADI/App.config
+++ b/ADI/App.config
@@ -23,10 +23,10 @@
     <add key="Database" value="BSTest"/>
     <add key="UserID" value="SA"/>
     <add key="UserName" value="sa"/>
-    <add key="Password" value="**password**"/>
-    <add key="server" value="lfs1.bsppl.net"/>
-    <add key="SiteReference" value="**site reference**"/>
-    <add key="HomeTaxValue" value="0.23"/>
+    <add key="Password" value=""/>
+    <add key="Server" value="lfs1.bsppl.net"/>
+    <add key="SiteReference" value="DM5544"/>
+    <add key="HomeTaxValue" value='0.20'/>
 
     <add key="GCNC GBP" value="0003199100GBP"/>
     <add key="TCNC GBP" value="0003199410GBP"/>
