refactored nominal lines to reduce repetition, updated Euro block of code

--- a/ADI/App.config
+++ b/ADI/App.config
@@ -23,7 +23,7 @@
     <add key="Database" value="BSTest"/>
     <add key="UserID" value="SA"/>
     <add key="UserName" value="sa"/>
-    <add key="Password" value=""/>
+    <add key="Password" value="run2top"/>
     <add key="Server" value="lfs1.bsppl.net"/>
     <add key="SiteReference" value="DM5544"/>
     <add key="HomeTaxValue" value='0.20'/>
