added better switch to test for skip lines and currency

--- a/ADI/App.config
+++ b/ADI/App.config
@@ -43,6 +43,9 @@
     <add key="GCNC EUR" value="0000000000EUR"/>
     <add key="TCNC EUR" value="0000000000EUR"/>
     <add key="CCODE EUR" value="EURR"/>
+    <add key="JOURREF" value="VOUCHERREF"/>
+    <add key="BATREF" value="FONTEVA"/>
+    <add key="JOURDESC" value="Membership Import Journal"/>
 
     <add key="ExchangeRate" value="1.2"/>
 
